# QuizPilot

./: .env.example  .gitignore  Notes  README.md  benchmark.py  generate_token.py  pyproject.toml  test_ai.py  test_models.py  test_quota.py  update_json.py
apps/: admin.py  ai_service.py  bot.py  serializers.py  tasks.py  telegram_utils.py  urls.py  views.py
apps/management/commands/: runbot.py
apps/migrations/: 0001_initial.py  0002_payment.py  0002_subscriptionplan_remove_payment_plan_name_and_more.py  0003_document_detected_question_count_document_status_and_more.py  0004_public.py  0005_lobby_join_code.py  0006_slide.py
apps/models/: __init__.py  documents.py  lobbies.py  managers.py  payments.py  prompts.py  public.py  quizes.py  users.py
documents/: test_quiz_file.txt
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/create/group/: page.tsx
frontend/src/app/create/prompt/: page.tsx
frontend/src/app/create/test/: page.tsx
frontend/src/app/create/upload/: page.tsx
frontend/src/app/edit/flashcard/[id]/: page.tsx
frontend/src/app/edit/quiz/[id]/: page.tsx
frontend/src/app/how-it-works/: page.tsx
frontend/src/app/play/flashcard/[id]/: page.tsx
frontend/src/app/premium/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: AuthProvider.tsx  BottomNav.tsx
frontend/src/contexts/: LanguageContext.tsx
frontend/src/dictionaries/: en.json  ru.json  uz.json
frontend/src/lib/: api.ts
root/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+5 files in other folders)
