[project]
name = "quizpilot"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "automium-web>=0.1.1",
    "dj-database-url>=3.1.2",
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-stubs>=3.17.0",
    "dotenv>=0.9.9",
    "drf-spectacular>=0.29.0",
    "markdown>=3.10.2",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.18",
]
